--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ code {
     --card: 0 0% 100%;
     --card-foreground: 222.2 47.4% 11.2%;
 
-    --primary: #1A237E ;
+    --primary: #03044F ;
     --primary-foreground: 210 40% 98%;
 
     --secondary: 210 40% 96.1%;
