--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ code {
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: #EFEFEF;
     --foreground: 222.2 47.4% 11.2%;
 
     --muted: 210 40% 96.1%;
@@ -33,10 +33,10 @@ code {
     --card: 0 0% 100%;
     --card-foreground: 222.2 47.4% 11.2%;
 
-    --primary: #03044F ;
+    --primary: #03044F;
     --primary-foreground: 210 40% 98%;
 
-    --secondary: 210 40% 96.1%;
+    --secondary: #FCCA46;
     --secondary-foreground: 222.2 47.4% 11.2%;
 
     --accent: 210 40% 96.1%;
